--- a/spel3/index.html
+++ b/spel3/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-<meta charset="UTF-8" />
-<title>🏰 Rybergs Slott Deluxe</title>
+<meta charset="UTF-8">
+<title>Rybergs Slott Deluxe</title>
 
 <style>
 body{
     margin:0;
+    background:radial-gradient(circle,#140022,#000);
     font-family:Arial;
-    background:radial-gradient(circle,#120022,#000);
     color:white;
     display:flex;
     justify-content:center;
@@ -16,51 +16,47 @@ body{
     height:100vh;
 }
 
-/* ---------- LAYOUT ---------- */
-
 .wrapper{
     text-align:center;
-    padding:25px;
+    padding:35px;
+    background:#120018;
     border-radius:20px;
-    background:linear-gradient(180deg,#1b0033,#0a0015);
     box-shadow:0 0 60px #ff00ff40;
 }
 
+/* NAMNET LÄNGRE NER */
 h1{
-    color:#ffd700;
-    text-shadow:0 0 15px gold;
+    margin-top:20px;
+    margin-bottom:25px;
+    color:gold;
+    text-shadow:0 0 12px gold;
 }
 
 #grid{
-    margin:25px auto;
     display:grid;
     grid-template-columns:repeat(4,85px);
     grid-template-rows:repeat(4,85px);
     gap:12px;
+    margin:20px auto;
 }
-
-/* ---------- CELLS ---------- */
 
 .cell{
     display:flex;
     justify-content:center;
     align-items:center;
-    font-size:48px;
+    font-size:46px;
     border-radius:14px;
-    background:linear-gradient(180deg,#2a003d,#150020);
-    box-shadow:inset 0 0 10px #000, 0 0 6px #ff00ff30;
-    transition:transform .12s linear;
+    background:linear-gradient(#2b003b,#150020);
+    box-shadow:inset 0 0 10px black;
+    transition:transform .15s;
 }
 
 .win{
-    animation:flash .45s infinite;
+    animation:flash .4s infinite;
 }
 @keyframes flash{
-    0%,100%{box-shadow:0 0 10px gold;}
-    50%{box-shadow:0 0 35px gold;}
+    50%{box-shadow:0 0 25px gold;}
 }
-
-/* ---------- BUTTONS ---------- */
 
 button{
     padding:10px 22px;
@@ -68,7 +64,7 @@ button{
     border-radius:10px;
     font-weight:bold;
     cursor:pointer;
-    margin:5px;
+    margin:6px;
 }
 
 .spin{background:#00ffe7;}
@@ -77,34 +73,24 @@ button{
 
 input{
     width:90px;
-    padding:6px;
-    border-radius:6px;
-    border:none;
     text-align:center;
 }
 
-/* ---------- BONUS MODE ---------- */
-
-.bonusMode{
-    background:radial-gradient(circle,#440066,#110011);
-    box-shadow:0 0 80px #ff00ff;
-}
-
-/* ---------- TEXT ---------- */
-
 .winText{
-    font-size:26px;
-    height:32px;
-    margin:8px;
+    height:30px;
+    margin:10px;
+    font-size:24px;
     color:#ffe600;
-    text-shadow:0 0 15px #ffe600;
 }
 
-.stats{
-    margin-top:10px;
+/* bonus glow */
+.bonusMode{
+    box-shadow:0 0 80px #ff00ff;
+    background:radial-gradient(circle,#3b0057,#110011);
 }
 </style>
 </head>
+
 <body>
 
 <div class="wrapper" id="wrapper">
@@ -112,38 +98,35 @@ input{
 <h1>🏰 Rybergs Slott Deluxe</h1>
 
 Satsning:
-<input type="number" id="bet" value="100" min="10" max="1000">
+<input id="betInput" type="number" value="100" min="10" max="1000">
 
 <div id="grid"></div>
 
 <div class="winText" id="winText"></div>
 
-<button class="spin" onclick="spin(false)">🎰 Snurra</button>
+<button class="spin" onclick="spin()">🎰 Snurra</button>
 <button class="bonus" onclick="buyBonus()">💎 Bonus (10 spins)</button>
 <button class="home" onclick="goHome()">← Tillbaka</button>
 
-<div class="stats">
-Saldo: <span id="money">1000</span> kr
-</div>
+<div>Saldo: <span id="money">1000</span> kr</div>
 
 </div>
-
 
 <script>
-const SIZE = 4;
-const symbols = ["💎","👑","🍀","⭐","🏰","🗡️"];
+const SIZE=4;
+const symbols=["💎","👑","🍀","⭐","🏰","🗡️"];
 
-let grid = [];
-let money = 1000;
-let spinning = false;
+let grid=[];
+let money=1000;
+let spinning=false;
 
-let bonusSpins = 0;
-let bonusMode = false;
+let bonusSpins=0;
 
-const gridEl = document.getElementById("grid");
-const moneyEl = document.getElementById("money");
-const winText = document.getElementById("winText");
-const wrapper = document.getElementById("wrapper");
+const gridEl=document.getElementById("grid");
+const moneyEl=document.getElementById("money");
+const winText=document.getElementById("winText");
+const wrapper=document.getElementById("wrapper");
+const betInput=document.getElementById("betInput");
 
 
 // ---------- INIT ----------
@@ -152,11 +135,11 @@ function createGrid(){
     for(let r=0;r<SIZE;r++){
         grid[r]=[];
         for(let c=0;c<SIZE;c++){
-            const cell=document.createElement("div");
-            cell.className="cell";
-            cell.dataset.r=r;
-            cell.dataset.c=c;
-            gridEl.appendChild(cell);
+            let d=document.createElement("div");
+            d.className="cell";
+            d.dataset.r=r;
+            d.dataset.c=c;
+            gridEl.appendChild(d);
             grid[r][c]=rand();
         }
     }
@@ -169,127 +152,112 @@ function rand(){
 
 function render(){
     document.querySelectorAll(".cell").forEach(cell=>{
-        const r=cell.dataset.r;
-        const c=cell.dataset.c;
-        cell.textContent = grid[r][c];
+        let r=cell.dataset.r;
+        let c=cell.dataset.c;
+        cell.textContent=grid[r][c];
         cell.classList.remove("win");
     });
 }
 
 
-// ---------- SMOOTH DROP (pro feel) ----------
-function dropAnimation(done){
-    let steps = 12;
-    let count = 0;
-
-    function frame(){
-        document.querySelectorAll(".cell").forEach(cell=>{
-            cell.style.transform=`translateY(${(steps-count)*6}px)`;
-        });
-
-        count++;
-        if(count<steps) requestAnimationFrame(frame);
-        else{
-            document.querySelectorAll(".cell").forEach(c=>c.style.transform="translateY(0)");
-            done();
-        }
-    }
-    frame();
-}
-
-
 // ---------- WIN CHECK ----------
 function checkWins(){
-    let wins=[];
+    let lines=[];
 
-    for(let r=0;r<SIZE;r++){
-        if(new Set(grid[r]).size===1) wins.push(grid[r].map((_,i)=>[r,i]));
-    }
+    for(let r=0;r<SIZE;r++)
+        if(new Set(grid[r]).size===1)
+            lines.push(grid[r].map((_,i)=>[r,i]));
 
     for(let c=0;c<SIZE;c++){
         let col=[grid[0][c],grid[1][c],grid[2][c],grid[3][c]];
-        if(new Set(col).size===1) wins.push([[0,c],[1,c],[2,c],[3,c]]);
+        if(new Set(col).size===1)
+            lines.push([[0,c],[1,c],[2,c],[3,c]]);
     }
 
-    return wins;
+    return lines;
 }
 
 
 // ---------- SPIN ----------
-function spin(isBonus){
+function spin(){
 
     if(spinning) return;
 
-    let bet = parseInt(bet.value);
-    if(money < bet){ alert("Inte tillräckligt!"); return;}
+    let bet=parseInt(betInput.value)||100;
+
+    if(money<bet){
+        alert("Inte tillräckligt med pengar!");
+        return;
+    }
 
     spinning=true;
-    money -= bet;
-    moneyEl.textContent = money;
+
+    money-=bet;
+    moneyEl.textContent=money;
     winText.textContent="";
 
-    // slumpa nya symboler
+    // nya symboler
     for(let r=0;r<SIZE;r++)
         for(let c=0;c<SIZE;c++)
             grid[r][c]=rand();
 
-    dropAnimation(()=>{
+    render();
 
-        render();
+    setTimeout(()=>{
 
-        let wins = checkWins();
-        let totalWin = 0;
+        let wins=checkWins();
+        let totalWin=0;
 
         wins.forEach(line=>{
             line.forEach(([r,c])=>{
                 document.querySelector(`[data-r='${r}'][data-c='${c}']`).classList.add("win");
             });
 
-            let mult = isBonus
-                ? Math.floor(Math.random()*8)+3   // 3-10x
-                : Math.floor(Math.random()*4)+2;  // 2-5x
+            let mult = bonusSpins>0
+                ? Math.floor(Math.random()*8)+3  // 3-10x
+                : Math.floor(Math.random()*4)+2; // 2-5x
 
-            totalWin += bet*mult;
+            totalWin+=bet*mult;
         });
 
-        if(isBonus && totalWin < bet*0.2)
-            totalWin = bet*0.2;
+        // bonus garanti
+        if(bonusSpins>0 && totalWin<bet*0.2)
+            totalWin=bet*0.2;
 
-        money += totalWin;
-        moneyEl.textContent = money;
+        money+=totalWin;
+        moneyEl.textContent=money;
 
-        if(totalWin >= bet*8) winText.textContent="🎉 MEGA WIN!";
-        else if(totalWin >= bet*4) winText.textContent="✨ BIG WIN!";
+        if(totalWin>=bet*8) winText.textContent="🎉 MEGA WIN!";
+        else if(totalWin>=bet*4) winText.textContent="✨ BIG WIN!";
         else if(totalWin>0) winText.textContent="WIN!";
 
         spinning=false;
 
-        // BONUS AUTO SPINS
-        if(bonusMode){
+        // bonus auto
+        if(bonusSpins>0){
             bonusSpins--;
-            if(bonusSpins>0){
-                setTimeout(()=>spin(true),700);
-            }else{
-                bonusMode=false;
+            if(bonusSpins>0)
+                setTimeout(spin,600);
+            else
                 wrapper.classList.remove("bonusMode");
-            }
         }
 
-    });
+    },200);
 }
 
 
 // ---------- BONUS ----------
 function buyBonus(){
-    let bet = parseInt(betInput.value || 100);
-    if(bet < 200){ alert("Minst 200 kr för bonus!"); return; }
+    let bet=parseInt(betInput.value)||100;
 
-    bonusMode=true;
+    if(bet<200){
+        alert("Minst 200 kr!");
+        return;
+    }
+
     bonusSpins=10;
-
     wrapper.classList.add("bonusMode");
-
-    spin(true);
+    spin();
 }
 
 
@@ -299,9 +267,7 @@ function goHome(){
 }
 
 
-// ---------- START ----------
 createGrid();
 </script>
-
 </body>
 </html>
