--- a/spel3/index.html
+++ b/spel3/index.html
@@ -7,8 +7,8 @@
 <style>
 body{
     margin:0;
-    background:radial-gradient(circle,#140022,#000);
     font-family:Arial;
+    background:radial-gradient(circle,#140022,#000);
     color:white;
     display:flex;
     justify-content:center;
@@ -17,27 +17,27 @@ body{
 }
 
 .wrapper{
-    text-align:center;
-    padding:35px;
+    padding:40px;
+    border-radius:25px;
     background:#120018;
-    border-radius:20px;
-    box-shadow:0 0 60px #ff00ff40;
+    box-shadow:0 0 70px #ff00ff30;
+    text-align:center;
+    width:420px;
 }
 
-/* NAMNET LÄNGRE NER */
 h1{
-    margin-top:20px;
-    margin-bottom:25px;
+    margin-top:25px;
     color:gold;
     text-shadow:0 0 12px gold;
 }
 
+/* GRID */
 #grid{
     display:grid;
-    grid-template-columns:repeat(4,85px);
-    grid-template-rows:repeat(4,85px);
+    grid-template-columns:repeat(4,80px);
+    grid-template-rows:repeat(4,80px);
     gap:12px;
-    margin:20px auto;
+    margin:25px auto;
 }
 
 .cell{
@@ -47,46 +47,53 @@ h1{
     font-size:46px;
     border-radius:14px;
     background:linear-gradient(#2b003b,#150020);
-    box-shadow:inset 0 0 10px black;
-    transition:transform .15s;
+    transition:all .15s;
 }
 
 .win{
-    animation:flash .4s infinite;
+    animation:pop .35s ease infinite;
 }
-@keyframes flash{
-    50%{box-shadow:0 0 25px gold;}
+@keyframes pop{
+    50%{transform:scale(1.2); box-shadow:0 0 25px gold;}
 }
 
+/* BUTTONS */
 button{
-    padding:10px 22px;
+    padding:10px 20px;
+    margin:6px;
     border:none;
     border-radius:10px;
     font-weight:bold;
     cursor:pointer;
-    margin:6px;
 }
 
 .spin{background:#00ffe7;}
 .bonus{background:#ff9900;}
 .home{background:#ff5555;}
 
-input{
-    width:90px;
-    text-align:center;
-}
-
 .winText{
-    height:30px;
-    margin:10px;
+    height:32px;
     font-size:24px;
     color:#ffe600;
+    margin:6px;
 }
 
-/* bonus glow */
+.multText{
+    height:22px;
+    color:#ff80ff;
+    font-size:16px;
+}
+
+.bonusInfo{
+    height:22px;
+    color:#ff66ff;
+    font-weight:bold;
+}
+
+/* BONUS MODE */
 .bonusMode{
-    box-shadow:0 0 80px #ff00ff;
     background:radial-gradient(circle,#3b0057,#110011);
+    box-shadow:0 0 90px #ff00ff;
 }
 </style>
 </head>
@@ -103,6 +110,8 @@ Satsning:
 <div id="grid"></div>
 
 <div class="winText" id="winText"></div>
+<div class="multText" id="multText"></div>
+<div class="bonusInfo" id="bonusInfo"></div>
 
 <button class="spin" onclick="spin()">🎰 Snurra</button>
 <button class="bonus" onclick="buyBonus()">💎 Bonus (10 spins)</button>
@@ -119,23 +128,24 @@ const symbols=["💎","👑","🍀","⭐","🏰","🗡️"];
 let grid=[];
 let money=1000;
 let spinning=false;
-
 let bonusSpins=0;
 
 const gridEl=document.getElementById("grid");
 const moneyEl=document.getElementById("money");
 const winText=document.getElementById("winText");
+const multText=document.getElementById("multText");
+const bonusInfo=document.getElementById("bonusInfo");
 const wrapper=document.getElementById("wrapper");
 const betInput=document.getElementById("betInput");
 
 
-// ---------- INIT ----------
+// INIT GRID
 function createGrid(){
     gridEl.innerHTML="";
     for(let r=0;r<SIZE;r++){
         grid[r]=[];
         for(let c=0;c<SIZE;c++){
-            let d=document.createElement("div");
+            const d=document.createElement("div");
             d.className="cell";
             d.dataset.r=r;
             d.dataset.c=c;
@@ -160,10 +170,9 @@ function render(){
 }
 
 
-// ---------- WIN CHECK ----------
+// CHECK WINS
 function checkWins(){
     let lines=[];
-
     for(let r=0;r<SIZE;r++)
         if(new Set(grid[r]).size===1)
             lines.push(grid[r].map((_,i)=>[r,i]));
@@ -173,30 +182,25 @@ function checkWins(){
         if(new Set(col).size===1)
             lines.push([[0,c],[1,c],[2,c],[3,c]]);
     }
-
     return lines;
 }
 
 
-// ---------- SPIN ----------
+// SPIN
 function spin(){
-
     if(spinning) return;
 
     let bet=parseInt(betInput.value)||100;
-
-    if(money<bet){
-        alert("Inte tillräckligt med pengar!");
-        return;
-    }
+    if(money<bet) return;
 
     spinning=true;
 
     money-=bet;
     moneyEl.textContent=money;
-    winText.textContent="";
 
-    // nya symboler
+    winText.textContent="";
+    multText.textContent="";
+
     for(let r=0;r<SIZE;r++)
         for(let c=0;c<SIZE;c++)
             grid[r][c]=rand();
@@ -207,25 +211,28 @@ function spin(){
 
         let wins=checkWins();
         let totalWin=0;
+        let mults=[];
 
         wins.forEach(line=>{
+            let mult = bonusSpins>0
+                ? Math.floor(Math.random()*8)+3
+                : Math.floor(Math.random()*4)+2;
+
+            mults.push("x"+mult);
+            totalWin+=bet*mult;
+
             line.forEach(([r,c])=>{
                 document.querySelector(`[data-r='${r}'][data-c='${c}']`).classList.add("win");
             });
-
-            let mult = bonusSpins>0
-                ? Math.floor(Math.random()*8)+3  // 3-10x
-                : Math.floor(Math.random()*4)+2; // 2-5x
-
-            totalWin+=bet*mult;
         });
 
-        // bonus garanti
         if(bonusSpins>0 && totalWin<bet*0.2)
             totalWin=bet*0.2;
 
         money+=totalWin;
         moneyEl.textContent=money;
+
+        multText.textContent = mults.join("   ");
 
         if(totalWin>=bet*8) winText.textContent="🎉 MEGA WIN!";
         else if(totalWin>=bet*4) winText.textContent="✨ BIG WIN!";
@@ -233,35 +240,36 @@ function spin(){
 
         spinning=false;
 
-        // bonus auto
         if(bonusSpins>0){
             bonusSpins--;
+            bonusInfo.textContent="BONUS: "+bonusSpins+" spins kvar";
+
             if(bonusSpins>0)
                 setTimeout(spin,600);
-            else
+            else{
                 wrapper.classList.remove("bonusMode");
+                bonusInfo.textContent="";
+            }
         }
 
     },200);
 }
 
 
-// ---------- BONUS ----------
+// BONUS
 function buyBonus(){
     let bet=parseInt(betInput.value)||100;
 
-    if(bet<200){
-        alert("Minst 200 kr!");
-        return;
-    }
+    if(bet<200) return;
 
     bonusSpins=10;
     wrapper.classList.add("bonusMode");
+    bonusInfo.textContent="BONUS: 10 spins kvar";
     spin();
 }
 
 
-// ---------- NAV ----------
+// NAV
 function goHome(){
     window.location.href="../index.html";
 }
